<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/repoName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:textColor="@color/blue"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/itemSeparator"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="@string/home_repo_name_tools_test" />

    <TextView
        android:id="@+id/repoDescription"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:maxLines="2"
        android:textSize="12sp"
        app:layout_constraintEnd_toStartOf="@+id/nameSurName"
        app:layout_constraintStart_toStartOf="@+id/repoName"
        app:layout_constraintTop_toBottomOf="@+id/repoName"
        tools:text="@string/home_repo_description_tools_test" />

    <ImageView
        android:id="@+id/forkIcon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_git_branch"
        android:contentDescription=""
        app:layout_constraintBottom_toTopOf="@+id/itemSeparator"
        app:layout_constraintStart_toStartOf="@+id/repoDescription"
        app:layout_constraintTop_toBottomOf="@+id/repoDescription" />

    <TextView
        android:id="@+id/repoForkCounter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/yellow"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/forkIcon"
        app:layout_constraintStart_toEndOf="@+id/forkIcon"
        app:layout_constraintTop_toTopOf="@+id/forkIcon"
        tools:text="@string/home_fork_count_tools_test" />

    <ImageView
        android:id="@+id/repoStarIcon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:src="@drawable/ic_star"
        app:layout_constraintBottom_toBottomOf="@+id/forkIcon"
        app:layout_constraintStart_toEndOf="@+id/repoForkCounter"
        app:layout_constraintTop_toTopOf="@+id/forkIcon" />

    <TextView
        android:id="@+id/repoStarCounter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/yellow"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/repoStarIcon"
        app:layout_constraintStart_toEndOf="@+id/repoStarIcon"
        app:layout_constraintTop_toTopOf="@+id/repoStarIcon"
        tools:text="@string/home_fork_count_tools_test" />

    <androidx.cardview.widget.CardView
        android:id="@+id/userProfileImg"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginEnd="50dp"
        android:elevation="24dp"
        app:cardCornerRadius="100dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/repoName">

        <ImageView
            android:id="@+id/profileImage"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            android:src="@drawable/empty_profile_image" />

    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/userName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:textColor="@color/blue"
        app:layout_constraintEnd_toEndOf="@+id/userProfileImg"
        app:layout_constraintStart_toStartOf="@+id/userProfileImg"
        app:layout_constraintTop_toBottomOf="@+id/userProfileImg"
        tools:text="@string/home_username_tools_test" />

    <TextView
        android:id="@+id/nameSurName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/grey"
        app:layout_constraintEnd_toEndOf="@+id/userName"
        app:layout_constraintStart_toStartOf="@+id/userName"
        app:layout_constraintTop_toBottomOf="@+id/userName"
        tools:text="@string/home_name_surname_tools_test" />

    <View
        android:id="@+id/itemSeparator"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="30dp"
        android:background="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nameSurName" />

</androidx.constraintlayout.widget.ConstraintLayout>