<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white">

    <TextView
        android:id="@+id/prTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:textColor="@color/blue"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/itemSeparator"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="@string/pr_title_tools_test" />

    <TextView
        android:id="@+id/prDescription"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:maxLines="2"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="@+id/itemSeparator"
        app:layout_constraintStart_toStartOf="@+id/prTitle"
        app:layout_constraintTop_toBottomOf="@+id/prTitle"
        tools:text="@string/home_repo_description_tools_test" />

    <androidx.cardview.widget.CardView
        android:id="@+id/userProfileImg"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginVertical="10dp"
        android:elevation="24dp"
        app:cardCornerRadius="100dp"
        app:layout_constraintBottom_toTopOf="@+id/itemSeparator"
        app:layout_constraintStart_toStartOf="@+id/itemSeparator"
        app:layout_constraintTop_toBottomOf="@+id/prDescription">

        <ImageView
            android:id="@+id/profileImage"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            android:src="@drawable/empty_profile_image" />

    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/userName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:textColor="@color/blue"
        app:layout_constraintStart_toEndOf="@+id/userProfileImg"
        app:layout_constraintTop_toTopOf="@+id/userProfileImg"
        tools:text="@string/home_username_tools_test" />

    <View
        android:id="@+id/itemSeparator"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="30dp"
        android:background="@color/black"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>